--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-preset-gatsby-package": "^3.3.0",
     "cross-env": "^7.0.3"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby/tree/master/packages/gatsby-source-filesystem#readme",
+  "homepage": "https://github.com/FraserThompson/gatsby-source-filesystem-fast",
   "keywords": [
     "gatsby",
     "gatsby-plugin"
