--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "file-type": "^16.5.4",
     "fs-extra": "^10.1.0",
     "gatsby-core-utils": "^4.3.1",
-    "md5-file": "^5.0.0",
+    "hash-wasm": "^4.9.0",
     "mime": "^2.6.0",
     "pretty-bytes": "^5.6.0",
     "valid-url": "^1.0.9",
